# LPA-AI-Projects-AI-Academic-Automations

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: assessments.py  auth_deps.py  bitrix.py  courseware_assessments.py  routes.py  slides.py
app/core/: config.py  database.py  storage_paths.py
app/models/: course.py  job.py
app/schemas/: assessment.py  bitrix.py  course.py  integration.py  job.py  outline_payload.py
app/services/: assessment_app_service.py  assessment_docx.py  assessment_service.py  bitrix_crm.py  bitrix_integration.py  bitrix_task_parser.py  bitrix_tasks.py  claude.py  course_map.py  course_outline_graph.py  course_refine.py  courseware_assessment_resolver.py  courseware_metrics.py  crm_outline_hooks.py  document_extractor.py  gamma_client.py  google_drive.py  pdf_service.py  ppt_merger.py  public_course_sheet.py  rate_limiter.py  slide_generator.py  slide_planner.py  slide_validator.py  slides_graph.py  slides_service.py  zoho_crm.py  zoho_integration.py
app/templates/: index.html  indexx.html  indexxxx.html
app/utils/: logger.py
scripts/: merge_and_upload_drive.py  test_asgi.py
scripts/codesandbox_sdk/: deploy.mjs  package-lock.json  package.json
tests/: test_bitrix_task_parser.py
