[project]
name = "course-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.55.0",
    "pydantic-settings>=2.10.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.26.4",
    "python-pptx>=1.0.2",
    "google-auth-oauthlib>=1.3.0",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "python-pptx-merger>=0.0.2",
]
